--- a/src/try.css
+++ b/src/try.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'cm';
+  src: url('./assets/computer-modern/cmunrm.ttf');
+}
+
 #mirror {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -5,4 +10,21 @@
 
 #mirror>* {
   height: 70vh;
+  overflow: scroll;
+  font-family: 'cm', 'Courier New', Courier, monospace;
+}
+
+#html-renderer {
+  display: flex;
+  justify-content: center;
+}
+
+.page {
+  background-image: url('./assets/paper2.png');
+  background-repeat: repeat;
+  margin: 10px 30px;
+  width: 21cm;
+  height: 29.7cm;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  ;
 }
