--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -15,7 +15,8 @@ body {
 
 #logo {
   color: var(--primary-accent-color);
-  font-size: 3rem;
+  font-size: 2rem;
+  line-height: 80px;
 }
 
 nav {
@@ -23,7 +24,7 @@ nav {
   color: #fff;
   display: flex;
   justify-content: space-between;
-  padding: 10px 30px;
+  padding: 10px 50px;
 }
 
 nav .right ul {
@@ -39,6 +40,7 @@ nav .right ul li {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   padding: 50px 0;
   background: var(--background-secondary-accent-color);
   color: #fff
@@ -144,4 +146,36 @@ footer ul li {
 
 .routerlink:hover {
   cursor: pointer
+}
+
+@media (max-width: 500px) {
+  #hero p {
+    font-size: 1rem;
+  }
+
+  #logo {
+    font-size: 1.3rem;
+  }
+
+  nav {
+    padding: 10px 20px;
+  }
+
+  #features {
+    grid-template-columns: 1fr;
+    padding: 0 15px;
+  }
+
+  #features p {
+    font-size: 1.1rem;
+  }
+
+  #inspiration>.img_block {
+    grid-template-columns: 1fr;
+    margin-bottom: 100px;
+  }
+
+  #inspiration {
+    padding: 40px 0;
+  }
 }
