--- a/src/css/try.css
+++ b/src/css/try.css
@@ -28,3 +28,13 @@
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   ;
 }
+
+@media (max-width: 500px) {
+  #editor {
+    height: 800px;
+  }
+
+  #mirror {
+    grid-template-columns: 1fr;
+  }
+}
